# ros2-performance

.github/workflows/: ci.yml
composition_benchmark/src/: base_node.cpp  composable_subscriber.cpp
irobot_benchmark/: CMakeLists.txt
irobot_benchmark/src/: irobot_benchmark.cpp
irobot_benchmark/topology/: mont_blanc.json
irobot_interfaces_plugin/: CMakeLists.txt
irobot_interfaces_plugin/action/: Stamped100kb.action  Stamped10b.action  Stamped1mb.action  Stamped4mb.action
memory_benchmark/: CMakeLists.txt  package.xml
memory_benchmark/include/: helper_macros.hpp  memory-test.hpp  messages.hpp
memory_benchmark/scripts/: plot_rss_results.py  run_all_benchmarks.sh  run_cyclone.sh  run_fast.sh
memory_benchmark/src/: default_pubs_params_off.cpp  default_subs_params_off.cpp  pub_sub_big_history_size.cpp  pub_sub_big_message_size.cpp  pub_sub_diff_topic.cpp  pub_sub_same_topic.cpp
memory_test/: CMakeLists.txt  package.xml
memory_test/scripts/: run_cyclone.sh  run_fast.sh
performance_metrics/include/performance_metrics/: events_logger.hpp  resource_usage_logger.hpp  stat_logger.hpp  tracker.hpp
performance_metrics/src/: resource_usage_logger.cpp  stat_logger.cpp  tracker.cpp
performance_test/: CMakeLists.txt  package.xml
performance_test/include/performance_test/: executors.hpp  performance_node.hpp  performance_node_base.hpp  performance_node_base_impl.hpp  system.hpp
performance_test/src/: executors.cpp  performance_node_base.cpp  system.cpp
performance_test_factory/include/performance_test_factory/: factory.hpp
performance_test_factory/src/: factory.cpp  names_utilities.cpp
performance_test_plugin_cmake/cmake/: generate_factory_plugin.cmake  generate_script.py
